--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link href="css/datatables.css" rel="stylesheet" />
     <link href="css/table-timeline.css" rel="stylesheet" />
     <link href="css/tables-new-gen.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+
+    <script src="js/mainqa.js"></script>
+
 </head>
 
 
@@ -67,7 +71,7 @@
     <a href="js/toasts.js.map">js/toasts.js.map</a>
     <a href="js/tooltips.js.map">js/tooltips.js.map</a>
     <a href="js/widgets.js.map">js/widgets.js.map</a>-->
-
+    <script src="js/mainqa.js"></script>
 
     <script>
         //window.addEventListener('load', () => {
